syntax = "proto3";

option java_package = "com.lightbend.model";

// Description of the extra parameters.
message ModelPreprocessing {
    int32 width = 1;         // model width
    double mean = 2;         // mean used by model
    double std = 3;          // STD used by model
    string input = 4;        // Model input
    string output = 5;       // Model output
}


// Description of the trained model.
message ModelDescriptor {
    // Model name
    string name = 1;
    // Human readable description.
    string description = 2;
    // Data type for which this model is applied.
    string dataType = 3;
    oneof MessageContent {
        // Byte array containing the model
        bytes data = 4;
        string location = 5;
    }
    ModelPreprocessing preprocessing = 6;   // Preprocessing parameters
}